--- a/tests/data/Makefile.inc
+++ b/tests/data/Makefile.inc
@@ -203,6 +203,8 @@ test2064 test2065 test2066 test2067 test2068 test2069 \
          test2071 test2072 test2073 test2074 test2075 test2076 test2077 \
 test2078 \
 test2080 \
+test2087 test2088 \
+\
 test2100 \
 \
 test3000 test3001
